images, grids, links and content

--- a/index.html
+++ b/index.html
@@ -10,9 +10,48 @@
     <title>Email Modern Layout</title>
 </head>
 <body>
-    <section class="nav"></section>
-    <section class="main-product-wrap"></section>
-    <section class="products-grid-wrap"></section>
-    <section class="bottom-wrap"></section>
+    <div class="body-column">
+        <div class="nav wrap">
+            <div class="nav-links">
+                <a href="#">Cat1</a>
+                <a href="#">Cat2</a>
+                <a href="#">Cat3</a>
+                <a href="#">Cat4</a>
+            </div>
+        </div>
+        <div class="main-product wrap">
+            <h1>Produto Principal Texto Exemplo</h1>
+            <img class="main-img" src="assets/EmailModernLayoutImgs/1.jpg" alt="">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>Totam dolorem in esse exercitationem ea accusamus, atque ex deserunt quia amet odio.</p>
+            <a class="button" href="#">Comprar</a>
+        </div>
+        <div class="products-grid wrap">
+            <div class="products-grid">
+                <div class="product-card">
+                    <p>Produto Título</p>
+                    <img class="card-img" src="assets/EmailModernLayoutImgs/2.jpg" alt="">
+                    <a href="">Comprar</a>
+                </div>
+                <div class="product-card">
+                    <p>Produto Título</p>
+                    <img class="card-img" src="assets/EmailModernLayoutImgs/1.jpg" alt="">
+                    <a href="">Comprar</a>
+                </div>
+                <div class="product-card">
+                    <p>Produto Título</p>
+                    <img class="card-img" src="assets/EmailModernLayoutImgs/3.jpg" alt="">
+                    <a href="">Comprar</a>
+                </div>
+                <div class="product-card">
+                    <p>Produto Título</p>
+                    <img class="card-img" src="assets/EmailModernLayoutImgs/4.jpg" alt="">
+                    <a href="">Comprar</a>
+                </div>
+            </div>
+        </div>
+        <div class="bottom wrap">
+    
+        </div>
+    </div>
 </body>
 </html>
