adapt Mara Estelar

--- a/index.html
+++ b/index.html
@@ -20,31 +20,21 @@
             </div>
         </div>
         <div class="main-product wrap">
-            <h1>Produto Principal Texto Exemplo</h1>
-            <img class="main-img" src="assets/EmailModernLayoutImgs/1.jpg" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.<br>Totam dolorem in esse exercitationem ea accusamus, atque ex deserunt quia amet odio.</p>
+            <h1>Chama Serena</h1>
+            <img class="main-img" src="https://maraestelar.com.br/media/6530/catalog/chamaserena-removebg.png" alt="">
+            <p>Aroma fresco e traz o toque natural para ambientes relaxantes, é um perfume que não cansa. É um mistura do floral frutado com Bamboo que tem as notas de cabeça Maçã, Banana, Pêssego, Limão, Menta, Bergamota e Folha de Laranjeira, notas de corpo Rosa, Violeta, Jasmim, Framboesa, Jasmim, Gerânio, Lírio do Vale e Notas Aquosas.</p>
             <a class="button" href="#">Comprar</a>
         </div>
         <div class="products-grid wrap">
             <div class="products-grid">
                 <div class="product-card">
                     <p>Produto Título</p>
-                    <img class="card-img" src="assets/EmailModernLayoutImgs/2.jpg" alt="">
+                    <img class="card-img" src="https://maraestelar.com.br/media/6223/catalog/96415210-60c1-481f-80a9-3da0705cc4f4.jpeg" alt="">
                     <a href="">Comprar</a>
                 </div>
                 <div class="product-card">
                     <p>Produto Título</p>
-                    <img class="card-img" src="assets/EmailModernLayoutImgs/1.jpg" alt="">
-                    <a href="">Comprar</a>
-                </div>
-                <div class="product-card">
-                    <p>Produto Título</p>
-                    <img class="card-img" src="assets/EmailModernLayoutImgs/3.jpg" alt="">
-                    <a href="">Comprar</a>
-                </div>
-                <div class="product-card">
-                    <p>Produto Título</p>
-                    <img class="card-img" src="assets/EmailModernLayoutImgs/4.jpg" alt="">
+                    <img class="card-img fit-image" src="https://maraestelar.com.br/media/6216/catalog/2727c09b-f5ea-4207-8a50-3a3fa4508e22.jpeg" alt="">
                     <a href="">Comprar</a>
                 </div>
             </div>
