--- a/index.html
+++ b/index.html
@@ -22,20 +22,21 @@
         <div class="main-product wrap">
             <h1>Chama Serena</h1>
             <img class="main-img" src="https://maraestelar.com.br/media/6530/catalog/chamaserena-removebg.png" alt="">
-            <p>Aroma fresco e traz o toque natural para ambientes relaxantes, é um perfume que não cansa. É um mistura do floral frutado com Bamboo que tem as notas de cabeça Maçã, Banana, Pêssego, Limão, Menta, Bergamota e Folha de Laranjeira, notas de corpo Rosa, Violeta, Jasmim, Framboesa, Jasmim, Gerânio, Lírio do Vale e Notas Aquosas.</p>
+            <p>É um mistura do floral frutado com Bamboo que tem as notas de cabeça Maçã, Banana, Pêssego, Limão, Menta, Bergamota e Folha de Laranjeira, notas de corpo Rosa, Violeta, Jasmim, Framboesa, Jasmim, Gerânio, Lírio do Vale e Notas Aquosas.</p>
+            <h3>R$ 29,90</h3>
             <a class="button" href="#">Comprar</a>
         </div>
         <div class="products-grid wrap">
             <div class="products-grid">
                 <div class="product-card">
-                    <p>Produto Título</p>
+                    <h3>Kit de Acessórios para Velas</h3>
                     <img class="card-img" src="https://maraestelar.com.br/media/6223/catalog/96415210-60c1-481f-80a9-3da0705cc4f4.jpeg" alt="">
-                    <a href="">Comprar</a>
+                    <a class="button" href="">Comprar</a>
                 </div>
                 <div class="product-card">
-                    <p>Produto Título</p>
+                    <h3>Fósforo Ecológico</h3>
                     <img class="card-img fit-image" src="https://maraestelar.com.br/media/6216/catalog/2727c09b-f5ea-4207-8a50-3a3fa4508e22.jpeg" alt="">
-                    <a href="">Comprar</a>
+                    <a class="button" href="">Comprar</a>
                 </div>
             </div>
         </div>
