--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
 <body>
     <div class="body-column">
         <div class="nav wrap">
-            <div class="nav-links">
+            <div class="nav-text">
+                <h1>10% de desconto na primeira compra! Utilize o cupom: <span class="text-upper">mara-10-off</span></h1>
+            </div>
+            <!-- <div class="nav-links">
                 <a href="#">Cat1</a>
                 <a href="#">Cat2</a>
                 <a href="#">Cat3</a>
                 <a href="#">Cat4</a>
-            </div>
+            </div> -->
         </div>
         <div class="main-product wrap">
             <h1>Chama Serena</h1>
