--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <div class="product-card">
                     <h2 class="product-title">Fósforo Ecológico</h2>
-                    <img class="card-img fit-image" src="https://maraestelar.com.br/media/6216/catalog/2727c09b-f5ea-4207-8a50-3a3fa4508e22.jpeg" alt="">
+                    <img class="card-img" src="https://maraestelar.com.br/media/6532/catalog/c45a205d-adbf-4198-bec9-85ea084c1c8bSquare.jpeg" alt="">
                     <h3  class="price-text">R$ 10,00</h3>
                     <a class="button" href="">Comprar</a>
                 </div>
